--- a/app/src/main/res/layout/dialog_scrap.xml
+++ b/app/src/main/res/layout/dialog_scrap.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
-            android:text="CANTIDAD"
+            android:text="SCRAP"
             android:textColor="@color/white"
             android:textSize="28sp"
             android:textStyle="bold"
