--- a/app/src/main/res/layout/activity_bobina.xml
+++ b/app/src/main/res/layout/activity_bobina.xml
@@ -5,17 +5,19 @@
     android:id="@+id/constrain_bobina"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C987E7F3"
     tools:context=".activitys.Bobina_Activity">
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
+        android:background="#009688"
+        android:padding="5dp"
 
         android:text="CARGAR BOBINA"
         android:textAlignment="center"
+        android:textColor="#F6F4F4"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,18 +28,20 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="4dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_weight="1.5"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/lyb_ProveedorNombre"
@@ -51,7 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="ProveedorNombre"
+                    android:text="Nombre Proveedor"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -64,7 +68,6 @@
                     android:dropDownWidth="wrap_content"
                     android:dropDownSelector="@color/black"
                     android:entries="@array/material"
-                    android:popupBackground="@color/teal_700"
                     android:spinnerDropDownItemStyle="@style/MySpinnerItemStyle" />
             </LinearLayout>
 
@@ -110,7 +113,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="Lote"
+                    android:text="Numero de Lote"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -120,8 +123,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:ems="10"
-                    android:hint="Descripción del lote"
-                    android:inputType="textPersonName"
+
+                    android:hint="Numeor del Lote"
+                    android:inputType="text|textCapCharacters"
                     android:selectAllOnFocus="true"
                     android:textAllCaps="true"
                     android:textSize="24sp"
@@ -174,7 +178,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="DefectuosaKg"
+                    android:text="Defectuos a Kg"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -205,7 +209,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="EsAbiertaoCerrada"
+                    android:text="Es Abierta o Cerrada"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -224,12 +228,16 @@
 
         </LinearLayout>
 
+        <Space
+            android:layout_width="20dp"
+            android:layout_height="match_parent" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.2"
+            android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingEnd="20dp">
+            android:paddingEnd="30dp">
 
             <LinearLayout
                 android:id="@+id/ly_once"
@@ -341,8 +349,9 @@
         android:id="@+id/bobina_btn_cancelar"
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/fondo"
+        android:backgroundTint="#F44336"
         android:text="Cancelar"
         android:textColor="@color/white"
         android:textSize="14sp"
@@ -356,8 +365,9 @@
         android:id="@+id/bobina_btn_guardar"
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/fondo"
+        android:backgroundTint="#009688"
         android:text="Guardar"
         android:textColor="@color/white"
         android:textSize="14sp"
