--- a/app/src/main/res/layout/dialog_num.xml
+++ b/app/src/main/res/layout/dialog_num.xml
@@ -70,7 +70,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:cursorVisible="true"
-            android:digits="0123456789,"
+            android:digits="0123456789."
             android:ems="10"
             android:inputType="phone"
             android:maxLength="5"
