--- a/app/src/main/res/layout/activity_bobina.xml
+++ b/app/src/main/res/layout/activity_bobina.xml
@@ -174,7 +174,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="Kilos de bobina"
+                    android:text="Metros o Kilos de bobina"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
